Fix vertical align

--- a/src/css/blocks/site-head.css
+++ b/src/css/blocks/site-head.css
@@ -39,7 +39,7 @@
 .nav-link .nav-icon {
     width: 1em;
     height: 1em;
-    vertical-align: -.25em;
+    vertical-align: -.15em;
 }
 
 .nav-icon {
